--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,19 @@
     <!-- 회원가입 관련 resource -->
     <string name = "dankook_domain">@ dankook.ac.kr</string>
     <string name="join_student_id_info">※ 배달원 등록은 단국대학교 학생만 가능합니다.\n학생증을 아래와 같이 찍어 업로드하면 일주일 내로 확인 후 등록 완료 됩니다.</string>
+    <string name = "join_finish_info">학생증 인증을 기다리세요.</string>
+    <string name = "join_email_duplicate_check">중복확인</string>
+    <string name ="join_button">회원가입</string>
+    <string name = "join_email_duplicate_info">이미 사용 중인 이메일입니다.</string>
+    <string name = "join_email_available_info">사용 가능한 이메일입니다.</string>
+    <string name = "join_email_form_info">이메일 형식이 아닙니다.</string>
+
+    <!-- 회원가입 및 회원정보 관련 resource -->
+    <string name = "password_available_info">사용 가능한 비밀번호입니다.</string>
+    <string name = "password_different_info">비밀번호가 같지 않습니다.</string>
+    <string name = "password_form_info">비밀번호는 대, 소문자, 숫자, 특수문자 포함 8~16자여야 합니다.</string>
+    <string name = "confirm_fail">정보를 다시 입력하세요.</string>
+
 
     <!-- 회원정보 수정 관련 resource -->
     <string name = "modify_password_info">비밀번호 변경 시에만 입력하세요.</string>
@@ -35,4 +48,10 @@
     <!-- 로딩 화면 관련 resource -->
     <string name = "app_title">곰아워</string>
     <string name = "app_version">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t배달원용</string>
+
+    <!-- 로그인 화면 관련 resource -->
+    <string name="login_student_id_info">아직 학생증 인증이 완료되지 않았습니다.</string>
+    <string name = "login_fail_dialog">로그인에 실패하였습니다.</string>
+    <string name = "login_fail_ok">확인</string>
+
 </resources>
